<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.socomtec.app.tesis.segve.app.segveapp.Activities.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorLight"
    tools:showIn="@layout/app_bar_main">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <android.support.v7.widget.CardView
                    android:id="@+id/AlertaRapidaCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/colorCard"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_marginTop="16dp"
                            android:id="@+id/imageView3"
                            android:layout_width="70dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_new_releases_black_24dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/alertarapida"
                            android:textSize="@dimen/fab_margin"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/ViolenciaCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorCard3"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="180dp"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_wc_black_24dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:drawableTint="@color/blanco"
                            android:text="@string/violencia"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/RoboVCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/colorAccent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="66dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:drawableTint="@color/blanco"
                            android:drawableLeft="@drawable/ic_drive_eta_black_24dp"
                            android:text="@string/roboV"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/IncendioCard"
                    android:layout_marginRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="@color/incendio"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_whatshot_black_24dp"
                            android:drawableTint="@color/blanco"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/incendio"
                            android:textColor="@color/blanco"
                            android:textAlignment="center"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/RoboCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:background="@color/colorCard2"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableLeft="@drawable/ic_home_black_24dp"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/robo"
                            android:drawableTint="@color/blanco"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <android.support.v7.widget.CardView
                    android:id="@+id/numeros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#ff9800"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_marginTop="16dp"
                            android:layout_width="70dp"
                            android:tint="@color/blanco"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_call_black_24dp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/activity_horizontal_margin"
                            android:text="@string/numero"
                            android:textAlignment="center"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/fab_margin"
                            android:textStyle="bold" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <!--







    -->

</LinearLayout>
